--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hyundai Brasil</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/header.css">
-    <link rel="stylesheet" href="/reponsivo.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="reponsivo.css">
 </head>
 <body>
 
 <header>
     
-    <img clas="img" src="/arquivos/images.png" alt="logo" style=" width: 218px; margin-right: 20px;">
+    <img clas="img" src="arquivos/images.png" alt="logo" style=" width: 218px; margin-right: 20px;">
         
     <div class="mobile-menu" href="">
         <div class="line1"></div>
